syntax = "proto3";

package example.cockroachdb;

option go_package = "github.com/catalystsquad/protoc-gen-go-gorm/example;example";

import "google/protobuf/timestamp.proto";
import "options/gorm.proto";
import "google/protobuf/struct.proto";

enum EnumOne {
  Default = 0;
  One = 1;
  Two = 2;
  Three = 3;
  Four = 4;
  Five = 5;
  Six = 6;
  Seven = 7;
  Eight = 8;
  Nine = 9;
}

message User {
  option (gorm.opts) = {ormable: true,};
  // @gotags: fake:"skip"
  optional string id = 1;
  // @gotags: fake:"skip"
  string created_at = 2;
  // @gotags: fake:"skip"
  google.protobuf.Timestamp updated_at = 3;
  // @gotags: fake:"{price:0.00,1000.00}"
  double a_double = 4;
  // @gotags: fake:"{price:0.00,1000.00}"
  float a_float = 5;
  // @gotags: fake:"{int32}"
  int32 an_int32 = 6;
  // @gotags: fake:"{number:9223372036854775807}"
  int64 an_int64 = 7;
  // @gotags: fake:"{bool}"
  bool a_bool = 16;
  // @gotags: fake:"{hackerphrase}"
  string a_string = 17;
  // @gotags: fake:"skip"
  bytes a_bytes = 18;
  // @gotags: fake:"{price:0.00,1000.00}"
  repeated double doubles = 19;
  // @gotags: fake:"{price:0.00,1000.00}"
  repeated float floats = 20;
  // @gotags: fake:"{int32}"
  repeated int32 int32s = 21;
  // @gotags: fake:"{number:9223372036854775807}"
  repeated int64 int64s = 22;
  // @gotags: fake:"{bool}"
  repeated bool bools = 31;
  // @gotags: fake:"{hackerphrase}"
  repeated string strings = 32;
  // @gotags: fake:"skip"
  repeated bytes bytess = 33;
  // @gotags: fake:"skip"
  optional string optional_scalar_field = 34;
  // @gotags: fake:"skip"
  google.protobuf.Struct a_structpb = 35;
  // @gotags: fake:"skip"
  Company company = 36 [(gorm.field).belongs_to = {}, (gorm.field).on_delete = "CASCADE"];
  // @gotags: fake:"skip"
  optional string company_two_id = 37;
  // @gotags: fake:"skip"
  Company company_two = 38 [(gorm.field).belongs_to = {}, (gorm.field).on_delete = "CASCADE"];
  // @gotags: fake:"skip"
  string an_unexpected_id = 39;
  // @gotags: fake:"skip"
  Company company_three = 40 [(gorm.field).belongs_to = {foreignkey: "AnUnexpectedId"}, (gorm.field).on_delete = "CASCADE"];
  // @gotags: fake:"skip"
  Address address = 41 [(gorm.field).has_one = {}, (gorm.field).on_delete = "CASCADE"];
  // @gotags: fake:"skip"
  repeated Comment comments = 42 [(gorm.field).has_many = {}, (gorm.field).on_delete = "CASCADE"];
  // @gotags: fake:"skip"
  repeated Profile profiles = 43 [(gorm.field).many_to_many = {}, (gorm.field).on_delete = "CASCADE"];
  // @gotags: fake:"{number:1,9}"
  EnumOne int_enum = 44;
  // @gotags: fake:"{number:1,9}"
  EnumOne string_enum = 45 [(gorm.field).enum_as_string = true];
  // @gotags: fake:"{number:1,9}"
  repeated EnumOne int_enum_list = 46;
  // @gotags: fake:"{number:1,9}"
  repeated EnumOne string_enum_list = 47 [(gorm.field).enum_as_string = true];
  // @gotags: fake:"{date:2006-01-02}"
  string date = 48 [(gorm.field).time_format_override = "2006-01-02"];
  // @gotags: fake:"{date:2006-01-02}"
  optional string optional_date = 49 [(gorm.field).time_format_override = "2006-01-02"];
  // @gotags: fake:"skip"
  google.protobuf.Timestamp some_timestamp = 50;
}

message Company {
  option (gorm.opts) = {ormable: true,};
  // @gotags: fake:"skip"
  optional string id = 1;
  // @gotags: fake:"skip"
  google.protobuf.Timestamp created_at = 2;
  // @gotags: fake:"skip"
  google.protobuf.Timestamp updated_at = 3;
  // @gotags: fake:"{name}"
  string name = 4;
}
message Address {
  option (gorm.opts) = {ormable: true,};
  // @gotags: fake:"skip"
  optional string id = 1;
  // @gotags: fake:"skip"
  google.protobuf.Timestamp created_at = 2;
  // @gotags: fake:"skip"
  google.protobuf.Timestamp updated_at = 3;
  // @gotags: fake:"{name}"
  string name = 4;
  // @gotags: fake:"skip"
  optional string user_id = 5;
  // @gotags: fake:"skip"
  User user = 6 [(gorm.field).belongs_to = {}, (gorm.field).on_delete = "CASCADE"];
  // @gotags: fake:"skip"
  Company companyBlob = 7 [(gorm.field).jsonb = true];
}

message Comment {
  option (gorm.opts) = {ormable: true,};
  // @gotags: fake:"skip"
  optional string id = 1;
  // @gotags: fake:"skip"
  google.protobuf.Timestamp created_at = 2;
  // @gotags: fake:"skip"
  google.protobuf.Timestamp updated_at = 3;
  // @gotags: fake:"{name}"
  string name = 4;
  // @gotags: fake:"skip"
  optional string user_id = 5;
}

message Profile {
  option (gorm.opts) = {ormable: true,};
  // @gotags: fake:"skip"
  optional string id = 1;
  // @gotags: fake:"skip"
  google.protobuf.Timestamp created_at = 2;
  // @gotags: fake:"skip"
  google.protobuf.Timestamp updated_at = 3;
  // @gotags: fake:"{name}"
  string name = 4;
}
